# lytt

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  openai.rs  orchestrator.rs
src/agent/: mod.rs  runner.rs  tools.rs
src/audio/: downloader.rs  mod.rs
src/audio_source/: local.rs  mod.rs  youtube.rs
src/chunking/: mod.rs  semantic.rs  temporal.rs
src/cli/: mod.rs  output.rs  preflight.rs
src/cli/commands/: agent.rs  ask.rs  chat.rs  config.rs  doctor.rs  export.rs  init.rs  list.rs  mcp.rs  mod.rs  rechunk.rs  search.rs  serve.rs  transcribe.rs
src/config/: mod.rs  prompts.rs  settings.rs
src/embedding/: mod.rs  openai.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/rag/: context.rs  mod.rs  response.rs
src/transcription/: format.rs  fusion.rs  gpt4o.rs  mod.rs  models.rs  whisper.rs
src/vector_store/: memory.rs  mod.rs  sqlite.rs
